--- a/Bandwidth/cannon.fm-Info.plist
+++ b/Bandwidth/cannon.fm-Info.plist
@@ -18,11 +18,12 @@
 				<string>Default@2x.png</string>
 				<string>icon.png</string>
 				<string>icon@2x.png</string>
+				<string>icon-72.png</string>
 			</array>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>fm.cannon.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>fm.cannon.ios</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -30,11 +31,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.0.8</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>150</string>
+	<string>202</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIBackgroundModes</key>
